<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddDetailActivity"
    tools:showIn="@layout/activity_main_add_detail"
    android:background="@drawable/bg">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentStart="false"
    android:layout_alignParentEnd="false"
    android:layout_alignParentTop="false"
    android:layout_below="@id/navBar"
    android:background="@drawable/border">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Wrapper">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="100"
            android:id="@+id/textHolder"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/enterDetailsTitle"
                android:id="@+id/infoTV"
                android:textSize="25sp"
                android:textColor="#030303"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/infoHolder"
            android:layout_weight="60"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nameHolder"
                android:layout_weight="70">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/venueNameTV"
                    android:id="@+id/nameTV"
                    android:textColor="#f50202"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="0dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nameET"
                    android:hint="Enter name"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/typeHolder"
                android:layout_weight="30">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/typeTV"
                    android:id="@+id/typeTV"
                    android:textColor="#e90b0b"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="0dp"
                    android:textSize="18sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/type"
                        android:spinnerMode="dropdown"
                        android:entries="@array/type"
                        android:layout_marginBottom="20dp" />

                    <!--    <RadioButton
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:text="Bar"
                           android:id="@+id/radioButton1" />

                       <RadioButton
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:text="Club"
                           android:id="@+id/radioButton2" />

                       <RadioButton
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:text="Restaurant"
                           android:id="@+id/radioButton3" /> -->
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addressHolder"
                android:layout_weight="70">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addressTV"
                    android:id="@+id/addressTV"
                    android:textColor="#f50202"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:id="@+id/addressET"
                    android:hint="Enter full address here (include post code)"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/emailHolder"
                android:layout_weight="70">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailTV"
                    android:id="@+id/emailTV"
                    android:textColor="#e90b0b"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailET"
                    android:hint="abc123@world.com"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/phoneHolder"
                android:layout_weight="70">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneTV"
                    android:id="@+id/phoneTV"
                    android:textColor="#e90b0b"
                    android:textSize="18sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/phoneET"
                    android:hint="010000000"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sendHolder"
                android:layout_weight="70"
                android:clickable="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displayBtn"
                    android:id="@+id/displayBtn" />

                <Space
                    android:layout_width="200dp"
                    android:layout_height="fill_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addBtn"
                    android:id="@+id/addBtn"
                    android:layout_gravity="right" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

</RelativeLayout>
