<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DisplayActivity"
    tools:showIn="@layout/activity_display">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:background="@drawable/border"
        android:padding="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Details"
                    android:id="@+id/textView"
                    android:layout_below="@+id/navBar"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nameLayout"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/venueNameTV"
                    android:id="@+id/nameLabel"
                    android:layout_alignTop="@+id/nameID"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/nameID"
                    android:textAlignment="center"
                    android:layout_below="@+id/textView"
                    android:layout_alignRight="@+id/addBtn"
                    android:layout_alignEnd="@+id/addBtn" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/typeLayout"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/typeTV"
                    android:id="@+id/typeLabel"
                    android:layout_alignTop="@+id/typeID"
                    android:layout_alignRight="@+id/nameLabel"
                    android:layout_alignEnd="@+id/nameLabel"
                    android:layout_alignParentLeft="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/typeID"
                    android:textAlignment="center"
                    android:layout_below="@+id/nameID"
                    android:layout_alignLeft="@+id/nameID"
                    android:layout_alignStart="@+id/nameID" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addressLayout"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/addressTV"
                    android:id="@+id/addressLabel"
                    android:layout_alignTop="@+id/addressID"
                    android:layout_alignRight="@+id/typeLabel"
                    android:layout_alignEnd="@+id/typeLabel"
                    android:layout_alignParentLeft="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/addressID"
                    android:textAlignment="center"
                    android:layout_below="@+id/typeID"
                    android:layout_alignLeft="@+id/typeID"
                    android:layout_alignStart="@+id/typeID" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/emailLayout"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/emailTV"
                    android:id="@+id/emailLabel"
                    android:layout_alignTop="@+id/emailID"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/emailID"
                    android:textAlignment="center"
                    android:layout_below="@+id/addressID"
                    android:layout_alignLeft="@+id/addressID"
                    android:layout_alignStart="@+id/addressID" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/phoneLayout"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/phoneTV"
                    android:id="@+id/phoneLabel"
                    android:layout_alignTop="@+id/phoneID"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/phoneID"
                    android:layout_below="@+id/emailID"
                    android:layout_alignLeft="@+id/emailID"
                    android:layout_alignStart="@+id/emailID"
                    android:textAlignment="center"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/countdownLayout"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/countdownTV"
                    android:id="@+id/countdownTV"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/countTV"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="20dp" />

                <LinearLayout
                    android:id="@+id/innerCountdownLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#000"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#000"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtTimerDay"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/txt_TimerDay"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="Days"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#000"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtTimerHour"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/txt_TimerHour"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="Hours"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#000"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtTimerMinute"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/txt_TimerMinute"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="Minutes"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#000"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtTimerSecond"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/txt_TimerSecond"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="Seconds"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#fff" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="360dp"
                android:layout_height="400dp"
                android:id="@+id/mapLayout"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="20dp">



                <fragment

                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    tools:context="com.example.liam.itp.MapsActivity"
                    android:id="@+id/map"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:id="@+id/buttonLayout">-->

                <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Prev"-->
                    <!--android:id="@+id/prevBtn"-->
                    <!--android:layout_alignTop="@+id/nextBtn"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:layout_weight="1" />-->

                <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/addBtn"-->
                    <!--android:id="@+id/addBtn"-->
                    <!--android:layout_alignBottom="@+id/prevBtn"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_weight="1" />-->

                <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Next"-->
                    <!--android:id="@+id/nextBtn"-->
                    <!--android:layout_below="@+id/phoneID"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_weight="1" />-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
